fixed overflow-x

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,7 +21,7 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* border:1px solid red */ 
+  overflow-x: hidden;
 }
 body {
   display: grid;
